Temporary fix, table now shows as one column on mobile and pc
I will work on a features table 2.0, which will be a lot nicer and have version 3.1 features of stringnosis

--- a/css/blade1.css
+++ b/css/blade1.css
@@ -232,7 +232,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 }
 
 .features-table th, td {
-  text-align: left;
+  text-align: center;
   padding: 6px;
 }
 
